cmake_minimum_required(VERSION 3.17)
project(Programming_Practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programming_Practice 完美立方.cpp)
add_executable(add1 生理周期.cpp)
add_executable(add2 称硬币.cpp)
add_executable(add3 第i位替换.cpp)
add_executable(add4 第i位取反.cpp)
add_executable(add5 左边i位取反.cpp)
add_executable(add6 熄灯问题.cpp)
add_executable(add7 求阶乘.cpp)
add_executable(add8 汉诺塔问题.cpp)
add_executable(add9 N皇后问题.cpp)
add_executable(add10 逆波兰表达式.cpp)
add_executable(add11 表达式计算.cpp)
add_executable(add12 爬楼梯.cpp)
add_executable(add13 放苹果.cpp)
add_executable(add14 算24.cpp)
add_executable(add15 最长上升子序列.cpp)
add_executable(add16 客栈入住情况统计.cpp)
add_executable(add17 二分查找.cpp)
add_executable(add18 二分法求方程的根.cpp)
add_executable(add19 找一对数.cpp)
add_executable(add20 归并排序.cpp)
add_executable(add21 快速排序.cpp)
add_executable(add22 学生信息处理程序.cpp)
add_executable(add23 奇怪的类复制.cpp)
add_executable(add24 Complex类的成员函数.cpp)
add_executable(add25 在图上寻找路径和遍历.cpp)
add_executable(add26 城堡问题.cpp)
add_executable(add27 Apple.cpp)
add_executable(add28 返回什么才好呢.cpp)
add_executable(add29 Big&Base封闭类问题.cpp)
add_executable(add30 魔兽世界之一：备战.cpp)
add_executable(add31 temp.cpp)
