cmake_minimum_required(VERSION 3.17)
project(Programming_Practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programming_Practice 完美立方.cpp)
add_executable(add1 生理周期.cpp)
add_executable(add2 称硬币.cpp)
add_executable(add3 第i位替换.cpp)
add_executable(add4 第i位取反.cpp)
add_executable(add5 左边i位取反.cpp)
add_executable(add6 熄灯问题.cpp)
add_executable(add7 求阶乘.cpp)
add_executable(add8 汉诺塔问题.cpp)
add_executable(add9 N皇后问题.cpp)
add_executable(add10 逆波兰表达式.cpp)
add_executable(add11 表达式计算.cpp)
add_executable(add12 爬楼梯.cpp)
add_executable(add13 放苹果.cpp)
add_executable(add14 算24.cpp)
add_executable(add15 最长上升子序列.cpp)
add_executable(add16 客栈入住情况统计.cpp)
add_executable(add17 二分查找.cpp)
add_executable(add18 二分法求方程的根.cpp)
add_executable(add19 找一对数.cpp)
add_executable(add20 归并排序.cpp)
add_executable(add21 快速排序.cpp)
add_executable(add22 学生信息处理程序.cpp)
add_executable(add23 奇怪的类复制.cpp)
add_executable(add24 Complex类的成员函数.cpp)
add_executable(add25 在图上寻找路径和遍历.cpp)
add_executable(add26 城堡问题.cpp)
add_executable(add27 Apple.cpp)
add_executable(add28 返回什么才好呢.cpp)
add_executable(add29 Big&Base封闭类问题.cpp)
add_executable(add30 魔兽世界之一：备战.cpp)
add_executable(add31 踩方格.cpp)
add_executable(add32 ROADS.cpp)
add_executable(add33 抓住这头牛.cpp)
add_executable(add34 迷宫问题.cpp)
add_executable(add35 MyString.cpp)
add_executable(add36 看上去好坑的运算符重载.cpp)
add_executable(add37 惊呆！Point竟然能这样输入输出.cpp)
add_executable(add38 二维数组类.cpp)
add_executable(add39 别叫，这个大整数已经很简化了!.cpp)
add_executable(add40 圣诞老人的礼物.cpp)
add_executable(add41 继承自string的MyString.cpp)
add_executable(add42 全面的MyString.cpp)
add_executable(add43 魔兽世界之二：装备.cpp)
add_executable(add44 电影节.cpp)
add_executable(add45 畜栏保留问题.cpp)
add_executable(add46 test.cpp)
add_executable(add47 看上去像多态.cpp)
add_executable(add48 Fun和Do.cpp)
add_executable(add49 这是什么鬼delete.cpp)
add_executable(add50 怎么又是Fun和Do.cpp)
add_executable(add51 Find_the_Winning_Move.cpp)
add_executable(add52 A_Star_not_a_Tree?.cpp)
add_executable(add53 魔兽世界之三：开战.cpp)
add_executable(add54 简单的SumArray.cpp)
add_executable(add55 简单的foreach.cpp)
add_executable(add56 简单的Filter.cpp)
add_executable(add57 你真的搞清楚为啥while\(cin>>n\)能成立了吗？.cpp)
add_executable(add58 山寨版istream_iterator.cpp)
add_executable(add59 这个模板并不难.cpp)
add_executable(add60 排序，又见排序！.cpp)
add_executable(add61 The_missionaries_and_cannibals.cpp)
add_executable(add62 Sudoku.cpp)
add_executable(add63 特殊密码锁.cpp)
add_executable(add64 拨钟问题.cpp)
add_executable(add65 全排列.cpp)
add_executable(add66 2的幂次方表示.cpp)
add_executable(add67 Boolean_Expressions.cpp)
add_executable(add68 简单的整数划分问题.cpp)
add_executable(add69 Aggressive_cows.cpp)
add_executable(add70 goodcopy.cpp)
add_executable(add71 按距离排序.cpp)
add_executable(add72 很难蒙混过关的CArray3d三维数组模板类.cpp)
add_executable(add73 编程填空：两数相乘.cpp)
add_executable(add74 编程填空：Hero与Priest.cpp)
add_executable(add75 编程填空：二进制第n位为1的整数个数.cpp)
add_executable(add76 编程填空：输出指定结果.cpp)
add_executable(add77 编程填空：又见模板.cpp)
add_executable(add78 编程填空：矩形排序.cpp)
add_executable(add79 编程填空：学生考勤记录查询.cpp)
add_executable(add80 编程填空：维护平面点.cpp)
add_executable(add81 编程填空：实现复数Complex类.cpp)
add_executable(add82 函数对象的过滤器.cpp)
add_executable(add83 白给的list排序.cpp)
add_executable(add84 我自己的_ostream_iterator.cpp)
add_executable(add85 派.cpp)
add_executable(add86 rotatebmp.cpp)
add_executable(add87 月度开销.cpp)
add_executable(add88 输出前k大的数.cpp)